--- a/wp-content/themes/maneira-advogados/style.css
+++ b/wp-content/themes/maneira-advogados/style.css
@@ -1462,6 +1462,9 @@ input[type="text"]{
 	width: 350px;
 	background-color: #065b71;
 	padding: 15px 0;
+	border: none;
+	border-radius: 5px;
+	color: white;
 }
 @media only screen and (max-width: 768px) {
 	footer #footer-left, footer #footer-right{
