--- a/wp-content/themes/maneira-advogados/style.css
+++ b/wp-content/themes/maneira-advogados/style.css
@@ -142,7 +142,7 @@ header .navbar-nav>li{
 /* Main Content */
 
 #main-content #content-image{
-	background-image: url("image/background-home.jpg");
+	background-image: url("image/background-home-maneira.jpg");
 	background-position: center center;
 	background-size: cover;
 }
