Ajuste tamanho da imagem no modal

--- a/wp-content/themes/maneira-advogados/style.css
+++ b/wp-content/themes/maneira-advogados/style.css
@@ -1061,7 +1061,7 @@ input[type="text"]{
     top: 80px;
     left: 240px;*/
     width: 490px;
-    height: 515px;
+    height: auto;
 }
 
 .myModalEquipe .links{
