--- a/wp-content/themes/maneira-advogados/style.css
+++ b/wp-content/themes/maneira-advogados/style.css
@@ -1468,6 +1468,7 @@ input[type="text"]{
 	border: none;
 	border-radius: 5px;
 	color: white;
+	text-align: center;
 }
 @media only screen and (max-width: 768px) {
 	footer #footer-left, footer #footer-right{
